@@ -1,3 +1,9 @@
+2011-03-08  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	Fix DWARF-3+ DW_AT_accessibility default assumption.
+	* dwarf2read.c (dwarf2_add_field): Fix new_field->accessibility for
+	cu->header.version >= 3.
+
 2011-03-08  Pedro Alves  <pedro@codesourcery.com>
 
 	* remote.c (remote_check_symbols): Skip if the target has no
